--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "spectacles-finances",
-  "version": "0.0.0",
-  "description": "Personal Finance App",
-  "author": null,
-  "private": true,
   "main": "node_modules/expo/AppEntry.js",
-  "devDependencies": {
-    "babel-preset-expo": "^7.0.0"
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^36.0.0",
-    "react": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
-    "firebase": "7.5.0",
-    "react-navigation": "4.0.10",
-    "react-native-paper": "3.1.1",
-    "react-native-dotenv": "0.2.0",
-    "react-native-screens": "^1.0.0-alpha",
-    "react-navigation-tabs": "2.6.2",
-    "react-navigation-stack": "1.10.3",
-    "react-native-datepicker": "1.7.2",
-    "react-native-reanimated": "^1.0.0-alpha",
-    "babel-preset-react-native": "4.0.1",
-    "react-native-gesture-handler": "^1.0.0",
-    "react-native-swipe-list-view": "2.0.6",
-    "react-native-vector-icons": "6.6.0"
-  }
+    "@react-native-community/masked-view": "^0.1.6",
+    "expo": "~36.0.0",
+    "expo-constants": "~8.0.0",
+    "firebase": "^7.7.0",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-paper": "^3.5.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "^0.6.2",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-swipe-list-view": "^2.1.3",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.16",
+    "react-navigation-tabs": "^2.7.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "babel-preset-expo": "~8.0.0",
+    "metro-react-native-babel-preset": "^0.58.0",
+    "react-native-dotenv": "^0.2.0"
+  },
+  "private": true
 }
