--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/masked-view": "0.1.5",
     "expo": "~36.0.0",
     "expo-constants": "~8.0.0",
     "firebase": "^7.7.0",
@@ -19,7 +19,7 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-paper": "^3.5.0",
     "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "^0.6.2",
+    "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-swipe-list-view": "^2.1.3",
     "react-native-vector-icons": "^6.6.0",
