--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-swipe-list-view": "^2.1.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^8.0.6",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.16",
     "react-navigation-tabs": "^2.7.0"
